<resources>
    <string name="app_name">Assignment1</string>
    <string name="Mobile_Num">Mobile Number</string>
    <string name="Message">Message</string>
    <string name="numbers">0123456789</string>
    <string name="bback">Back</string>
    <string name="bNext">Next</string>
    <string name="bExit">Exit</string>
    <string name="w_sh">W-SH</string>
    <string name="r_sh">R-SH</string>
    <string name="w_is">W-IS</string>
    <string name="r_is">R-IS</string>
    <string name="w_db">W-DB</string>
    <string name="r_db">R-DB</string>
</resources>