<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:text="@string/Mobile_Num"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:text="@string/numbers" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Message"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textMobile"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        tools:text="@string/Message" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="100dp"
        android:text="@string/bback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMessage" />

    <Button
        android:id="@+id/btnRIS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="@string/r_is"
        app:layout_constraintBottom_toBottomOf="@+id/btnWIS"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnWSH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/w_sh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <Button
        android:id="@+id/btnWIS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/w_is"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnWSH"
        app:layout_constraintTop_toBottomOf="@+id/btnWDB"
        app:layout_constraintVertical_bias="0.321" />

    <Button
        android:id="@+id/btnRSH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_sh"
        app:layout_constraintStart_toStartOf="@+id/btnRDB"
        app:layout_constraintTop_toTopOf="@+id/btnWSH" />

    <Button
        android:id="@+id/btnWDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/w_db"
        app:layout_constraintStart_toStartOf="@+id/btnWSH"
        app:layout_constraintTop_toBottomOf="@+id/btnWSH" />

    <Button
        android:id="@+id/btnRDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_db"
        app:layout_constraintStart_toStartOf="@+id/btnRIS"
        app:layout_constraintTop_toTopOf="@+id/btnWDB" />

</androidx.constraintlayout.widget.ConstraintLayout>